[gd_scene load_steps=2 format=3 uid="uid://c7k8yam0n1p2q"]

[ext_resource type="Script" path="res://scripts/ui/resource_bar.gd" id="1_resourcebar"]

[node name="ManaBar" type="Control"]
layout_mode = 0
anchors_preset = 0
offset_left = 52.0
offset_top = 74.0
offset_right = 180.0
offset_bottom = 90.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_resourcebar")
bar_color = Color(0.2, 0.4, 1, 1)
signal_name = "mana_changed"

[node name="BorderPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FillContainer" type="Control" parent="."]
layout_mode = 0
anchors_preset = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 110.0
offset_bottom = 14.0
grow_horizontal = 0
grow_vertical = 0
clip_contents = true

[node name="LightFill" type="Panel" parent="FillContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 0.6
grow_horizontal = 2
grow_vertical = 0
offset_bottom = 7.2

[node name="DarkFill" type="Panel" parent="FillContainer"]
layout_mode = 1
anchors_preset = 7
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_top = 7.2

